@@ -59,6 +59,10 @@ Release 0.8.5
   support or custom encryption)
 - fix broken text confirmation email if no shipping address exists (virtual
   orders);
+- removed obsolete function zm_quote(..)
+- all strings generated by the admin language tool (zmL10n.php) are now
+  wrapped in double quotes '"'; this fixes #1834415 and also makes other
+	special chars like "\n" work properly
 
 Release 0.8.4
 - make gv_send form secure
